--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: https://yt3.googleusercontent.com/A_j437rQLje_Tp_9lCNrXtddSSIoB0Wu5wXuw-RXrNmLDzMmGkpmrLThdSNJiuWcZsnjbgA8=s176-c-k-c0x00ffffff-no-rj
+about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Igor and I'm a senior web developer. As well as web development I also have experience managing servers and deploying sites. I have worked at a number of companies gaining teamwork and leadership skills.
 
