--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ instagram_username: igorprietoechepare
 # linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: @igorprieto
+youtube_username: "@igorprieto"
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
