--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ darkmode: true
 
 # Social links
 #twitter_username: igorpri3to
-github_username:  igorpri3to
+github_username:  igorprieto
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
