Fix GitHub repository URL

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: igorpri3to/igorpri3to.github.io
+repository: IgorPrieto/igorprieto.github.io
 favicon: images/favicon.ico
 
 # Content configuration version
